--- a/src/template.html
+++ b/src/template.html
@@ -14,6 +14,11 @@
             <button>Contact</button>
         </nav>
     </header>
-    <div id="content"></div>
+    <div id="content">
+        <div>
+            <h1>Welcome to my restaurant!</h1>
+        </div>
+        <img src="" alt="restaurant-page">
+    </div>
 </body>
 </html>
