--- a/src/template.html
+++ b/src/template.html
@@ -3,13 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Restaurant Page</title>
+    <title>Kyle's Milkshake Bar</title>
 </head>
 <body>
     <header>
         <nav>
             <button>Home</button>
-            <button>About</button>
+            <button>Menu</button>
             <button>Contact</button>
         </nav>
     </header>
